Remove tiny hidden spacing issues in social icons

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ p {
 ul.social {
 	margin-top: 150px;
 	padding: 0;
+	font-size: 0;
 }
 
 ul.social li {
@@ -102,8 +103,6 @@ ul.social li {
 	width: 64px;
 	border-radius: 32px;
 	margin: 0 20px 20px 0;
-	
-	color: transparent;
 }
 
 li.tasklogue {
